# python-manifest-note-app

./: README.md  manifest.db  pyproject.toml
example/: manifest.json
manifest_api/: __init__.py  app.py  cli.py  db.py  dyn_crud.py  manifest.db  models.py  runtime.py
manifest_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
